--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.3",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
